# dash-app-structure

./: Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
devtools/conda_envs/: test_env.yml
src/: .env.development  app.py  gunicorn_config.py
src/components/: __init__.py  login.py  navbar.py  plots.py
src/pages/: home.py  login.py  logout.py  not_found_404.py  page2.py
src/utils/: api.py  images.py  preprocess_data.py  settings.py
tempmon/: gunicorn_config.py
tempmon/components/: __init__.py  dog_image.py  footer.py  login.py  navbar.py  number_fact_aio.py
tempmon/pages/: page2.py
tempmon/pages/complex_page/: comp1.py  layout.py
tempmon/utils/: __init__.py  images.py  settings.py
tests/pages/: test_home_callbacks.py
